# tutoring-simulation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-entrypoint.sh  fly.toml  pyproject.toml  run_from_json.py  run_pilot_sweep.py
data/: cultural_knowledge.json  languages.json  models.json  profiles.json  regions.json  run_set.json  run_set_contrast.json  run_set_dialogic.json  topics.json  topics_cd.json  topics_ci.json
data/translations/: translate_set.json
docs/: annotation_tool.md  evaluation.md  notes.md  simulation.md
evaluations/pedagogy/: ModernBertConditioned.ipynb  ModernBertMultiHead.ipynb  TutoringExperiment.ipynb  collect_conversations.py  dimensions.md  findings_2026-07-09-conditional_multihead.md  findings_2026-07-09.md  goals.md  longformer.ipynb  plan.md
runs/annotating/run_set_06300129/: run_set.json
runs/annotating/run_set_06300202/: run_set.json
runs/annotating/run_set_06300217/: run_set.json
runs/annotating/run_set_06300251/: run_set.json
runs/annotating/run_set_06300322/: run_set.json
runs/annotating/run_set_06301117/: run_set_06301117.json
runs/contrast/run_set_09070800/: contrast_conversations.jsonl
runs/convolearn/run_set_0707261514/: run_set.json
runs/convolearn/run_set_0707261534/: run_set.json
runs/convolearn/run_set_07081515/: conversations.jsonl
runs/run_set_06301159/: run_set_06301159.json
runs/tamil_test/: run_set_tamil_test.json
src/tutoring_check/: __init__.py  __main__.py  cli.py  config.py  runlog.py  simulator.py  vertex_auth.py
src/tutoring_check/annotation/: app.py  (+2 more)
(+687 files in other folders)
