[project]
name = "tutoring-check"
version = "0.1.0"
description = "State-driven tutor/student conversation simulator using LiteLLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "litellm",
  "python-dotenv",
  "pydantic>=2.0",
]

[project.optional-dependencies]
annotation = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "python-multipart",
]

[project.scripts]
tutoring-annotate = "tutoring_check.annotation.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
